# langchain-study

./: .gitignore  README.md  pyproject.toml  requirements.txt
chatpdf/: main.py  requirements.txt
inflearn-langchain/: 2.1 LangChain vs LangGraph (feat. LangGraph 개념 설명).ipynb  pyproject.toml
inflearn-langgraph/: 2.2 간단한 Retrieval 에이전트 (feat. PDF 전처리 꿀팁).ipynb  2.3 공식문서 따라하면 실패하는 Agentic RAG.ipynb  2.4 생성된 답변을 여러번 검증하는 Self-RAG.ipynb  2.5 웹 검색을 지원하는 Corrective RAG.ipynb  2.6 SubGraph_LangGraph Agent를 Node로 활용하는 방법.ipynb  3.5.1 Agent의 히스토리를 관리하는 방법.ipynb  (+17 more)
langchain-academy/deep-agents/: README.md  pyproject.toml
langchain-academy/deep-agents/my_lecture/: ck_vers.py
langchain-academy/deep-agents/my_lecture/notebooks/: 0_create_agent.ipynb  1_todo.ipynb  2_files.ipynb  3_subagents.ipynb  4_full_agent.ipynb
langchain-academy/deep-agents/my_lecture/src/deep_agents_from_scratch/: file_tools.py  prompts.py  research_tools.py  state.py  task_tool.py  todo_tools.py
langchain-academy/deep-agents/offcial/notebooks/: 2_files.ipynb  3_subagents.ipynb  4_full_agent.ipynb
langchain-academy/intro-to-langchain/: pyproject.toml
langchain-academy/intro-to-langchain/my_lecture/module1/: 1.1_foundational_models.ipynb  1.1_prompting.ipynb  1.2_web_search.ipynb  1.3_memory.ipynb  1.4_multimodal_messages.ipynb  1.5_personal_chef.ipynb  1.5_personal_chef.py
langchain-academy/intro-to-langchain/my_lecture/module1/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
langchain-academy/intro-to-langchain/my_lecture/module2/: 2.1_mcp.ipynb  2.1_travel_agent.ipynb  2.2_runtime_context.ipynb  2.2_state.ipynb  2.3_multi_agent.ipynb  2.4_wedding_planners.ipynb  bonus_rag.ipynb  bonus_sql.ipynb
langchain-academy/intro-to-langchain/my_lecture/module2/resources/: 2.1_mcp_server.py
langchain-academy/intro-to-langchain/my_lecture/module3/: 3.2_managing_messages.ipynb  3.3_hitl.ipynb  3.4.1_dynamic_prompts.ipynb  3.4.2_dynamic_tools.ipynb  3.4.3_dynamic_models.ipynb  3.5_email_agent.ipynb  3.5_email_agent.py
langchain-academy/intro-to-langchain/official/notebooks/module-1/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
langchain-academy/intro-to-langgraph/: pyproject.toml
langchain-academy/intro-to-langgraph/my_lecture/module-0/: basics.ipynb
langchain-academy/intro-to-langgraph/my_lecture/module-1/: 1.1.simple-graph.ipynb  1.4 chain.ipynb  1.5 router.ipynb  1.6.agent.ipynb  1.7.agent-memory.ipynb  1.8.deployment.ipynb
langchain-academy/intro-to-langgraph/my_lecture/module-1/studio/: langgraph.json
langchain-academy/intro-to-langgraph/my_lecture/module-1/studio/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
langchain-academy/intro-to-langgraph/my_lecture/module-2/: 2.1.state-schema.ipynb  2.2.state-reducers.ipynb  2.3.multiple-schemas.ipynb  2.4.trim-filter-messages.ipynb  2.5.chatbot-summarization.ipynb  2.6.chatbot-external-memory.ipynb
langchain-academy/intro-to-langgraph/my_lecture/module-2/state_db/: example.db-shm  example.db-wal
langchain-academy/intro-to-langgraph/my_lecture/module-2/studio/: langgraph.json
langchain-academy/intro-to-langgraph/my_lecture/module-3/: 3.1.streaming-interruption.ipynb  3.2.breakpoints.ipynb  3.4.dynamic-breakpoints.ipynb  3.5.time-travel.ipynb
langchain-academy/intro-to-langgraph/my_lecture/module-3/studio/: langgraph.json
langchain-academy/intro-to-langgraph/my_lecture/module-3/studio/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
langchain-academy/intro-to-langgraph/my_lecture/module-4/: 4.1.parallelization.ipynb  4.2.sub-graph.ipynb  4.3.map-reduce.ipynb  4.4.research-assistant.ipynb
langchain-academy/intro-to-langgraph/my_lecture/module-4/studio/: langgraph.json
langchain-academy/intro-to-langgraph/my_lecture/module-4/studio/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
langchain-academy/intro-to-langgraph/my_lecture/module-5/: 5.1.memory_store.ipynb  5.2.memoryschema_profile.ipynb  5.3.memoryschema_collection.ipynb  5.4.memory_agent.ipynb
langchain-academy/intro-to-langgraph/my_lecture/module-6/: 6.1.creating.ipynb  6.2.connecting.ipynb  6.3.double-texting.ipynb  6.4.assistant.ipynb
langchain-academy/intro-to-langgraph/my_lecture/module-6/deployment/: docker-compose.yml  langgraph.json
langchain-academy/langgraph-essentials/: pyproject.toml
langchain-academy/langgraph-essentials/my_lecture/: L1_nodes.ipynb  L2_edges.ipynb  L3-L4_cedges_memory.ipynb  L5_interrupt.ipynb  L6_EmailAgent.ipynb
medium/1.adaptive_rag/: CLAUDE.md  README.md  pyproject.toml  requirements.txt
medium/1.adaptive_rag/backend/: app.py  graph_workflow.py  rag_pipeline.py
medium/1.adaptive_rag/frontend/: ui.py
(+147 files in other folders)
