[project]
name = "langchain-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "jupyter>=1.1.1",
    "langchain>=1.0.3",
    "langchain-anthropic>=1.0.1",
    "langchain-openai>=1.0.2",
    "langchain-tavily>=0.2.13",
    "langchain-teddynote>=0.5.3",
    "langgraph>=1.0.2",
    "notebook>=7.4.7",
    "python-dotenv>=1.2.1",
]
