[project]
name = "intro-to-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "jupyter>=1.1.1",
    "langchain>=1.2.0",
    "langchain-anthropic>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.2",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "langgraph-api>=0.7.14",
    "langgraph-cli[inmem]>=0.4.11",
    "langsmith>=0.5.1",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.21",
]
