[project]
name = "langgraph-essentials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "jupyter>=1.1.1",
    "langchain>=1.2.8",
    "langchain-anthropic>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "langgraph-cli>=0.4.12",
]
